infra/client-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: meta-client-service
          image: raziiik/meta-client-service:latest
        

---
# auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv 
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 5173
      targetPort: 5173
