infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv

  annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: metamedia.com
      http:
        paths:
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 3000
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3001
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 5173
          - path: /api/post/?(.*)
            pathType: Prefix
            backend:
              service:
                name: post-srv
                port:
                  number: 3002        
  ingressClassName: nginx
